@@ -14,4 +14,8 @@ Submitted - day16 - Homework - Unset x bit from right
 Submitted - day16 - Homework - Bit Compression
 Submitted - day12 - Assignment - Matrix Multiplication
 
+07/05/2023
+Submitted - day18 - Assignment - divisible by 8
+
+
 
